@@ -525,7 +525,8 @@ void begin_token_list(halfword p, quarterword t)
             iloc = token_link(p);
             if (tracing_macros_par > 1) {
                 begin_diagnostic();
-                tprint_nl("");
+             // tprint_nl("");
+                print_input_level();
                 if (t == mark_text)
                     tprint_esc("mark");
                 else if (t == write_text)
