@@ -1,3 +1,13 @@
+2021-01-31 Luigi Scarso <luigi.scarso@gmail.com> 
+    * mark math glyphs as protected (in order to prevent processing
+      as text in base mode) (H.Hagen)
+    * removed width/ic compensation for traditional math code path
+      (see [Dev-luatex] Duplicated italic correction in do_delimiter ) (H.Hagen)
+
+2021-01-30 Luigi Scarso <luigi.scarso@gmail.com> 
+    * level_max and level_chr determing what gets put in front of
+      macro tracing lines (variant on suggestion by PO on implementors list)(H. Hagen)
+
 2021-01-13 Luigi Scarso <luigi.scarso@gmail.com> 
     * pdftex compatibility hack (H. Hagen)
 
